--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -1,1 +1,40 @@
 @import 'tailwindcss';
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-family: 'Press Start 2P', monospace;
+    /*overflow: hidden;*/
+    background: #000;
+}
+
+p,h2,h3,label,button,li {
+    color: #0ff;
+}
+
+/* Bouton Start placé sur l'écran de la console */
+.start-btn {
+    font-size: 1.5rem;
+    padding: 1rem 2rem;
+    background: #111;
+    color: #0ff;
+    border: 4px solid #0ff;
+    border-radius: 8px;
+    cursor: pointer;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    transition: 0.15s ease-in-out;
+}
+
+.start-btn:hover {
+    /*transform: translateX(-50%) scale(1.08);*/
+    box-shadow: 0 0 15px #0ff;
+}
+
+@media (max-width: 600px) {
+    .start-btn {
+        font-size: 1.2rem;
+        padding: 0.8rem 1.5rem;
+    }
+}
